@@ -161,12 +161,12 @@ gint plugin_init(gchar **error)
         bindtextdomain(TEXTDOMAIN, LOCALEDIR);
 	bind_textdomain_codeset(TEXTDOMAIN, "UTF-8");
 
-	if ((sylpheed_get_version() > VERSION_NUMERIC)) {
+	if ((claws_get_version() > VERSION_NUMERIC)) {
 		*error = g_strdup(_("Your Claws-Mail version is newer than the version the plugin was built with"));
 		return -1;
 	}
 
-	if ((sylpheed_get_version() < MAKE_NUMERIC_VERSION(2, 5, 6, 12))) {
+	if ((claws_get_version() < MAKE_NUMERIC_VERSION(2, 5, 6, 12))) {
 		*error = g_strdup(_("Your Claws-Mail version is too old"));
 		return -1;
 	}
