@@ -28,7 +28,7 @@
 #include "gettext.h"
 
 #include "version.h"
-#include "sylpheed.h"
+#include "claws.h"
 #include "plugin.h"
 #include "utils.h"
 #include "hooks.h"
