@@ -1,3 +1,9 @@
+2006-11-27 [paul]	0.2.1cvs4
+
+	* src/attachwarner.c
+	* src/attachwarner.h
+		renaming
+
 2006-11-16 [wwp]	0.2.1cvs3
 
 	* .cvsignore
